2006-09-09  Katsutoshi Itoh  <cut-sea@kahua.org>

	* replace skel/proj/base.kahua
	  to skel/proj/auto-update-base.kahua and skel/proj/slot-acl-base.kahua.
	* <auto-update-base> and <slot-acl-base> is prototype
	  of MOP base class collection.
	
2006-09-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.6 released.

	* README: Added

2006-09-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* INSTALL: Merge "Let's just try Kahua".

	* cgi/kahua.cgi.in: Fix a bug.
	  If SERVER_NAME has port number, Location header value was
	  irregular URI: http://hostname:port:port/path/path/path...
	  Apache http server doesn't give port number to SERVER_NAME,
	  but lighttpd does.

	* src/kahua/persistence.scm, src/kahua/persistence/*.scm:
	  Now lock tables in kahua-db-sync, not in each write-kahua-instance.

2006-09-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	  src/kahua-httpd.scm, src/kahua-spvr.scm, cgi/kahua.cgi.in: Arrange

2006-08-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* cgi/kahua.cgi.in: Now its configuration follow kahua.config.

	* src/kahua/config.scm.in: Add kaha-tmpbase for temporary file base.

	* test/worker.scm, test/redirectcont.scm: Fix for change of kahua.server

	* src/kahua-spvr.scm: Fix
	  - Use define-condition-type instead of define-class for definition
	    of exceptions.

	* src/kahua/server.scm: Fix bugs.
	  - Fit 302 status message to RFC2616.
	  - Use "content-type" instead of "Content-Type" for avoid error
	    of FastCGI.

	* src/kahua/persistence/fs.scm: Fix lack of (use gauche.logger).

	* src/kahua/protocol/worker, src/kahua/protocol/http: Add
	  Splitted from src/kahua-httpd.scm, and now kahua.cgi use
	  them.

	* cgi/kahua.cgi.in, src/kahua-httpd.scm: Arranged

2006-08-21  Katsutoshi Itoh <cut-sea@kahua.org>

	* add remove-keyword/keyrem into skel/proj/utility.kahua.

2006-08-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* test/httpd.scm